completed the figure content

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,10 +2,51 @@
 
 html{
     font-size:10px;
+    font-family: sans-serif;
 }
 h1{
     font-family: 'Indie Flower', cursive ;
     text-align: center;
     font-size:4rem;
     margin: 2rem 0;
+}
+p{
+    font-size: 1.6rem;
+    line-height: 1.5;
+}
+.photo-grid{
+    display: flex;
+    max-width: 1200PX;
+    margin: auto;
+    flex-wrap: wrap;
+}
+figure{
+    border:1px solid #d3d3d3;
+    flex-basis: calc(33.333% - 4rem);
+    padding:2rem;
+    flex-grow: 1;
+    margin: 0 2rem 2rem 2rem;
+}
+
+figure img {
+    width:calc(100% + 4rem);
+    margin: -2rem 0rem 0rem -2rem;
+}
+
+figcaption{
+    text-align: center;
+}
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+}
+
+.remove-btn{
+    flex-basis: 48%;
+    color:red;
+    font-size:15px;
+    border: 2px solid #f2f2f2;
+    line-height: 2;
+    padding:5px;
 }
