--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -50,3 +50,16 @@ figcaption{
     line-height: 2;
     padding:5px;
 }
+
+.add-icon{
+    margin: 20px auto;
+    text-align: center;
+    display: flex;
+    padding:20px;
+    background: url(https://png.icons8.com/ultraviolet/50/000000/plus.png) no-repeat;
+    background-size: contain;
+    border:none;
+    color:transparent;
+    cursor: pointer;
+    width:0;
+}
